--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -1,2 +1,49 @@
+/* header.sass */
 .header
   background-color: #fff
+  &-top
+    display: flex
+    justify-content: space-between
+    align-items: center
+    padding: 40px 0
+  &__search
+    margin-right: auto
+    margin-left: 108px
+.search
+  position: relative
+  // display: flex
+  overflow: hidden
+  border-radius: 6px
+  height: 40px
+  &__input
+    height: 100%
+    width: 350px
+    padding-left: 23px
+    padding-right: 75px
+    background-color: #F5FAFE
+    border: none
+    font-style: 12px
+    line-height: 15px
+    color: $text-color
+  &__button
+    position: absolute
+    top: 0
+    right: 0
+    background: $button-bg-color
+    height: 100%
+    width: 65px
+    border: none
+.user
+  display: flex
+  align-items: center
+  text-decoration: none
+  &__avatar
+    width: 40px
+    height: 40px
+    object-fit: cover
+    border-radius: 50%
+  &__name
+    height: 40px
+    margin-left: 18px
+    color: $text-color
+    padding-top: 9px
