--- a/css/style.css
+++ b/css/style.css
@@ -357,11 +357,11 @@ template {
 }
 
 /* header.sass */
-.header {
+.navbar {
   background-color: #fff;
 }
 
-.header-top {
+.navbar-top {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -374,9 +374,40 @@ template {
   padding: 40px 0;
 }
 
-.header__search {
+.navbar__search {
   margin-right: auto;
   margin-left: 108px;
+}
+
+.navbar-menu {
+  background-color: #0A223D;
+}
+
+.logo {
+  width: 177px;
+}
+
+.navigation {
+  list-style-type: none;
+  padding: 31px 0;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.navigation__link {
+  color: #ffffff;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 14px;
+  line-height: 18px;
 }
 
 .search {
@@ -431,4 +462,42 @@ template {
   margin-left: 18px;
   color: #333333;
   padding-top: 9px;
+}
+
+@media (max-width: 1200px) {
+  .container {
+    max-width: 960px;
+  }
+}
+
+@media (max-width: 992px) {
+  .container {
+    max-width: 700px;
+  }
+  .navbar__top {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+  .navbar__search {
+    margin-left: auto;
+  }
+  .search__input {
+    width: 340px;
+  }
+  .navigation {
+    padding: 22px 0;
+  }
+  .navigation__link {
+    font-size: 12px;
+    line-height: 15px;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    max-width: 576px;
+  }
+  .logo {
+    width: 133px;
+  }
 }
