--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -9,6 +9,23 @@
   &__search
     margin-right: auto
     margin-left: 108px
+  &-menu
+    background-color: $dark
+.logo
+  width: 177px
+.navigation
+  list-style-type: none
+  padding: 31px 0
+  margin: 0
+  display: flex
+  align-items: center
+  justify-content: space-between
+  &__link
+    color: $light
+    text-decoration: none
+    text-transform: uppercase
+    font-size: 14px
+    line-height: 18px
 .search
   position: relative
   // display: flex
