--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@ body {
   margin: auto;
 }
 
+img {
+  max-width: 100%;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -374,6 +378,10 @@ template {
   padding: 40px 0;
 }
 
+.navbar-top__menu-button {
+  display: none;
+}
+
 .navbar__search {
   margin-right: auto;
   margin-left: 108px;
@@ -474,9 +482,8 @@ template {
   .container {
     max-width: 700px;
   }
-  .navbar__top {
-    padding-top: 30px;
-    padding-bottom: 30px;
+  .navbar-top {
+    padding: 30px 0;
   }
   .navbar__search {
     margin-left: auto;
@@ -496,8 +503,48 @@ template {
 @media (max-width: 768px) {
   .container {
     max-width: 576px;
+    width: 92%;
   }
   .logo {
     width: 133px;
+  }
+  .navbar__search, .navbar__user, .navbar-menu {
+    display: none;
+  }
+  .menu-button {
+    height: 16px;
+    border: none;
+    padding: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    background: #fff;
+  }
+  .menu-button__line {
+    width: 18px;
+    height: 1px;
+    background-color: #333333;
+  }
+}
+
+@media (max-width: 576px) {
+  .container {
+    width: 90%;
+  }
+  .logo {
+    width: 99px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .navbar-top {
+    padding: 25px;
   }
 }
