--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -6,9 +6,8 @@
   .container
     max-width: 700px
   .navbar
-    &__top
-      padding-top: 30px
-      padding-bottom: 30px
+    &-top
+      padding: 30px 0
     &__search
       margin-left: auto
   .search
@@ -23,5 +22,33 @@
 @media (max-width: 768px)
   .container
     max-width: 576px
+    width: 92%
   .logo
     width: 133px
+  .navbar
+    &__search, &__user, &-menu
+      display: none
+
+  .menu
+    &-button
+      height: 16px
+      border: none
+      padding: 0
+      display: flex
+      flex-direction: column
+      justify-content: space-between
+      background: #fff
+      &__line
+        width: 18px
+        height: 1px
+        background-color: $text-color
+
+@media (max-width: 576px)
+  .container
+    width: 90%
+  .logo
+    width: 99px
+@media  (min-width: 320px) and (max-width: 480px)
+  .navbar
+    &-top
+      padding: 25px
