--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -42,6 +42,19 @@
         width: 18px
         height: 1px
         background-color: $text-color
+  .hotel
+    &-name
+      flex-basis: 100%
+    &-info
+      &__text
+        justify-content: space-between
+      &__offer
+        order: -1
+        margin-left: 0
+  .stars
+    flex-basis: auto
+  .ratting
+    display: none
 
 @media (max-width: 576px)
   .container
