--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6,5 +6,9 @@
 @import 'normalize'
 // Подключение стилей для блока Header
 @import 'blocks/header'
+// Хлебные крошки
+@import 'blocks/breadcrumb'
+// Подключение стилей для блока Hotel
+@import 'blocks/hotel'
 // Подключение стилей для адаптива
 @import 'media'
