--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -33,13 +33,13 @@
 .ratting
   display: flex
   flex-wrap: wrap
-.ratting
   max-width: 65px
   min-height: 45px
   text-align: center
   border-radius: 4px
   color: $light
   background-color: $button-bg-color
+  padding: 7px 6px
   &__text
     font-size: 8px
     line-height: 10px
