--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -4,6 +4,7 @@
     display: flex
     justify-content: space-between
     align-items: center
+    padding-bottom: 20px
     &__text
       display: flex
       flex-wrap: wrap
@@ -12,15 +13,17 @@
       margin-left: 14px
     &__name
       margin: 4px 0
-
-  &-name
-    font-size: 24px
-    line-height: 30px
+    &-name
+      font-size: 24px
+      line-height: 30px
   &-description
     margin: 0
     font-size: 12px
     line-height: 15px
     flex-basis: 100%
+  &-grid
+    display: flex
+    justify-content: flex-start
 .stars
   flex-basis: 100%
 .offer
@@ -46,3 +49,32 @@
   &__counter
     font-size: 14px
     line-height: 18px
+    &:after
+      content: '5'
+      font-size: 10px
+      line-height: 13px
+.swiper-container
+  position: relative
+  width: 728px
+  height: 450px
+  border-radius: 8px
+.slider
+  &-button
+    position: absolute
+    top: 50%
+    transform: translateY(-50%)
+    z-index: 99
+    width: 30px
+    height: 30px
+    border: none
+    cursor: pointer
+    background-color: transparent
+    background-size: 10px
+    background-position: center
+    background-repeat: no-repeat
+    &--next
+      right: 18px
+      background-image: url(../img/arrow-next.svg)
+    &--prev
+      left: 18px
+      background-image: url(../img/arrow-prev.svg)
