--- a/css/style.css
+++ b/css/style.css
@@ -615,9 +615,14 @@ template {
 
 .swiper-container {
   position: relative;
+  border-radius: 8px;
+  width: 100%;
+  height: 100%;
+}
+
+.slider {
   width: 728px;
   height: 450px;
-  border-radius: 8px;
 }
 
 .slider-button {
@@ -763,13 +768,22 @@ template {
 .map {
   width: 347px;
   height: 213px;
-  background-color: red;
+  background-color: #e0d6d6;
   border-radius: 10px;
+  overflow: hidden;
 }
 
 @media (max-width: 1200px) {
   .container {
     max-width: 960px;
+  }
+  .slider {
+    width: 590px;
+  }
+  .swiper-slide__image {
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
 }
 
@@ -792,6 +806,30 @@ template {
   .navigation__link {
     font-size: 12px;
     line-height: 15px;
+  }
+  .hotel-grid {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .hotel__wrap {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .hotel__slider {
+    margin-bottom: 40px;
+  }
+  .slider {
+    width: 100%;
+  }
+  .booking, .map {
+    width: 340px;
   }
 }
 
@@ -842,12 +880,30 @@ template {
             order: -1;
     margin-left: 0;
   }
+  .hotel__wrap {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
   .stars {
     -ms-flex-preferred-size: auto;
         flex-basis: auto;
   }
   .ratting {
     display: none;
+  }
+  .slider {
+    height: 350px;
+  }
+  .booking {
+    width: 100%;
+  }
+  .map {
+    width: 100%;
+  }
+  .map__wrap {
+    margin-top: 20px;
   }
 }
 
@@ -857,6 +913,12 @@ template {
   }
   .logo {
     width: 99px;
+  }
+  .slider {
+    height: 250px;
+  }
+  .hotel__slider {
+    margin-bottom: 20px;
   }
 }
 
