--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -59,10 +59,12 @@
       line-height: 13px
 .swiper-container
   position: relative
+  border-radius: 8px
+  width: 100%
+  height: 100%
+.slider
   width: 728px
   height: 450px
-  border-radius: 8px
-.slider
   &-button
     position: absolute
     top: 50%
@@ -89,7 +91,6 @@
   color: $light
   border-radius: 8px
   padding: 28px
-  // display: flex
   &__info
     display: flex
     justify-content: space-between
@@ -149,5 +150,6 @@
 .map
   width: 347px
   height: 213px
-  background-color: red
+  background-color: #e0d6d6
   border-radius: 10px
+  overflow: hidden
