--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -10,7 +10,7 @@
         object-fit: cover
 
 @media (max-width: 992px)
-  .container
+  .container, .newsletter-wrapper
     max-width: 700px
   .navbar
     &-top
@@ -83,6 +83,12 @@
     width: 100%
     &__wrap
       margin-top: 20px
+  .newsletter
+    &-wrapper
+      max-width: 576px
+      width: 92%
+      flex-direction: column
+      align-items: flex-start
 
 @media (max-width: 576px)
   .container
@@ -94,6 +100,24 @@
   .hotel
     &__slider
       margin-bottom: 20px
+  .newsletter
+    padding: 73px 0 86px 0
+    &-title
+      &__wrapper
+        margin-top: 0
+        margin-bottom: 0
+    &__subscribe
+      margin-top: 37px
+    &-title
+      font-size: 20px
+      line-height: 25px
+  .subscribe
+    width: 100%
+    &__strong
+      font-size: 30px
+      line-height: 38px
+    &__button
+      height: 100%
 
 @media  (min-width: 320px) and (max-width: 480px)
   .navbar
