--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,5 +10,7 @@
 @import 'blocks/breadcrumb'
 // Подключение стилей для блока Hotel
 @import 'blocks/hotel'
+// Подключение стилей для блока Newsletter
+@import 'blocks/newsletter'
 // Подключение стилей для адаптива
 @import 'media'
