--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,8 +1,9 @@
 @media (max-width: 1200px)
   .container
     max-width: 960px
-  .slider
-    width: 590px
+  .hotel
+    &-slider
+      width: 590px
   .swiper
     &-slide
       &__image
@@ -33,10 +34,20 @@
       justify-content: space-between
     &__slider
       margin-bottom: 40px
-  .slider
-    width: 100%
+    &-slider
+      width: 100%
   .booking, .map
     width: 340px
+  .swiper
+    &-slide
+      &__image
+        height: 450px
+  .reviews
+    &-slider
+      &__item
+        max-width: 580px
+      &__text
+        max-width: 455px
 
 @media (max-width: 768px)
   .container
@@ -89,17 +100,36 @@
       width: 92%
       flex-direction: column
       align-items: flex-start
+  .swiper
+    &-slide
+      &__image
+        width: 100%
+        object-fit: contain
+  .reviews
+    &-slider
+      &__item
+        padding: 0 30px 30px
+        &:after, &:before
+          display: none
+    &-swiper
+      &__button
+        top: 30px
+        &--prev
+          left: 34%
+        &--next
+          right: 34%
 
 @media (max-width: 576px)
   .container
     width: 90%
   .logo
     width: 99px
-  .slider
-    height: 250px
   .hotel
     &__slider
       margin-bottom: 20px
+    &-slider
+      height: 250px
+      width: 100%
   .newsletter
     padding: 73px 0 86px 0
     &-title
@@ -118,6 +148,10 @@
       line-height: 38px
     &__button
       height: 100%
+  .reviews
+    &-slider
+      &__text
+        width: 90%
 
 @media  (min-width: 320px) and (max-width: 480px)
   .navbar
