--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -28,6 +28,30 @@
     display: flex
     flex-direction: column
     justify-content: space-between
+  &-slider
+    width: 728px
+    height: 450px
+    &__button
+      position: absolute
+      top: 50%
+      transform: translateY(-50%)
+      z-index: 99
+      width: 30px
+      height: 30px
+      border: none
+      cursor: pointer
+      background-color: transparent
+      background-size: 10px
+      background-position: center
+      background-repeat: no-repeat
+      &--next
+        right: 18px
+        background-image: url(../img/arrow-next.svg)
+      &--prev
+        left: 18px
+        background-image: url(../img/arrow-prev.svg)
+  &__slider
+    margin: 0
 .stars
   flex-basis: 100%
 .offer
@@ -60,30 +84,9 @@
 .swiper-container
   position: relative
   border-radius: 8px
-  width: 100%
+  max-width: 100%
   height: 100%
-.slider
-  width: 728px
-  height: 450px
-  &-button
-    position: absolute
-    top: 50%
-    transform: translateY(-50%)
-    z-index: 99
-    width: 30px
-    height: 30px
-    border: none
-    cursor: pointer
-    background-color: transparent
-    background-size: 10px
-    background-position: center
-    background-repeat: no-repeat
-    &--next
-      right: 18px
-      background-image: url(../img/arrow-next.svg)
-    &--prev
-      left: 18px
-      background-image: url(../img/arrow-prev.svg)
+
 .booking
   width: 350px
   font-family: Nunito
