--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,6 +10,8 @@
 @import 'blocks/breadcrumb'
 // Подключение стилей для блока Hotel
 @import 'blocks/hotel'
+// Подключение стилей для блока Отзывы
+@import 'blocks/reviews'
 // Подключение стилей для блока Newsletter
 @import 'blocks/newsletter'
 // Подключение стилей для адаптива
