--- a/sass/style.sass
+++ b/sass/style.sass
@@ -14,5 +14,9 @@
 @import 'blocks/reviews'
 // Подключение стилей для блока Newsletter
 @import 'blocks/newsletter'
+// Подключение стилей для блока развлечений
+@import 'blocks/activities'
+// Подключение стилей для подвала
+@import 'blocks/footer'
 // Подключение стилей для адаптива
 @import 'media'
