--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -9,6 +9,9 @@
       &__image
         height: 100%
         object-fit: cover
+  .card
+    width: 230px
+    height: 230px
 
 @media (max-width: 992px)
   .container, .newsletter-wrapper
@@ -48,6 +51,14 @@
         max-width: 580px
       &__text
         max-width: 455px
+  .activities
+    &-wrapper
+      flex-wrap: wrap
+    &__card
+      margin-bottom: 20px
+  .card
+    width: 340px
+    height: 230px
 
 @media (max-width: 768px)
   .container
@@ -90,9 +101,8 @@
     height: 350px
   .booking
     width: 100%
-  .map
-    width: 100%
-    &__wrap
+
+    &__block
       margin-top: 20px
   .newsletter
     &-wrapper
@@ -118,6 +128,17 @@
           left: 34%
         &--next
           right: 34%
+    .activities
+      padding: 40px 0 60px 0
+    .card
+      width: 48%
+      height: 255px
+  .map
+    width: 100%
+    iframe
+      width: 100%
+    &__block
+      margin-top: 20px
 
 @media (max-width: 576px)
   .container
@@ -152,6 +173,8 @@
     &-slider
       &__text
         width: 90%
+  .card
+    width: 100%
 
 @media  (min-width: 320px) and (max-width: 480px)
   .navbar
