--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -12,6 +12,9 @@
   .card
     width: 230px
     height: 230px
+  .footer
+    &__imput
+      flex-basis: 100%
 
 @media (max-width: 992px)
   .container, .newsletter-wrapper
@@ -59,6 +62,35 @@
   .card
     width: 340px
     height: 230px
+  .footer
+    &-wrapper
+      grid-template-columns: repeat(6, 1fr)
+      grid-row-gap: 40px
+    &__input
+      flex-basis: 49%
+    &__logo
+      grid-row: 1 / 2
+      grid-column: span 2
+    &__social
+      &-network
+        grid-row: 1 / 2
+        grid-column: span 4
+        align-self: center
+    &__categories
+      grid-row: 2 / 3
+      grid-column: span 2
+    &__additional
+      grid-column: span 2
+    &__legal
+      grid-column: span 2
+    &__contact
+      &-details
+        grid-row: 3
+        grid-column: span 5
+    &__contacts
+      &-form
+        grid-row: 4
+        grid-column: span 5
 
 @media (max-width: 768px)
   .container
@@ -130,15 +162,18 @@
           right: 34%
     .activities
       padding: 40px 0 60px 0
-    .card
-      width: 48%
-      height: 255px
+  .card
+    width: 48%
+    height: 255px
   .map
     width: 100%
     iframe
       width: 100%
     &__block
       margin-top: 20px
+  .footer
+    &__input
+      flex-basis: 100%
 
 @media (max-width: 576px)
   .container
@@ -175,6 +210,56 @@
         width: 90%
   .card
     width: 100%
+  .footer
+    &-wrapper
+      grid-template-columns: 1fr
+      grid-gap: 30px
+    &__logo
+      grid-row: 1
+      grid-column: 1
+      width: 104px
+    &__title--inline
+      margin-bottom: 22px
+    &__social
+      &-network
+        grid-row: 2
+        grid-column: 1
+        display: flex
+        flex-direction: column
+        align-items: flex-start
+    &__categories
+      grid-row: 3
+      grid-column: 1
+    &__additional
+      grid-row: 4
+      grid-column: 1
+    &__legal
+      grid-row: 5
+      grid-column: 1
+    &__contact
+      &-details
+        grid-row: 6
+        grid-column: 1
+    &__contacts
+      &-form
+        grid-row: 7
+        grid-column: 1
+        display: flex
+        flex-direction: column
+
+    &__info
+      flex-basis: 100%
+      margin-bottom: 15px
+    &__button
+      order: 2
+    &__end
+      flex-wrap: wrap
+    &__conditions
+      width: 100%
+      text-align: left
+    &__pay
+      margin-top: 10px
+      display: block
 
 @media  (min-width: 320px) and (max-width: 480px)
   .navbar
