--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -1,6 +1,6 @@
 $button-bg-color: #EC1F46
 $bg: #F5FAFE
 $text-color: #333333
-$footer-text-color: #BDBDBD
+$footer-text-color: #E0E0E0
 $dark: #0A223D
 $light: #ffffff
