--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -4,11 +4,9 @@
   padding: 108px 0 46px 0
   &-wrapper
     display: grid
-    grid-template-columns: 23% 23% 31% 23%
-    // grid-template-columns: repeat (4, minmax(min-content, 1fr))
+    grid-template-columns: repeat(4, minmax(min-content, 1fr))
     grid-gap: 20px
     grid-auto-rows: minmax(40px, min-content)
-    align-items: start
   &__logo
     width: 166px
     align-self: stretch
@@ -25,7 +23,7 @@
       grid-row: 2 / 4
       grid-column: span 2
       display: flex
-      align-content: center
+      align-items: center
   &__contact
     &-details
       grid-column: span 2
@@ -80,12 +78,14 @@
     margin-bottom: 15px
     flex-basis: 48%
   &__message
+    height: 123px
     background-color: #fff
     border-radius: 4px
     border: none
     padding: 18px 23px
     flex-basis: 100%
     margin-bottom: 22px
+    resize: none
   &__button
     min-width: 160px
     min-height: 50px
@@ -102,3 +102,23 @@
     font-size: 12px
     line-height: 15px
     color: $footer-text-color
+  &__end
+    min-width: 100%
+    margin-top: 102px
+    display: flex
+    align-items: center
+    justify-content: space-between
+  &__conditions
+  &__condition
+    font-weight: normal
+    margin-right: 10px
+    font-size: 12px
+    line-height: 15px
+  &__pay
+    max-width: 136px
+    display: flex
+    justify-content: space-between
+    flex-basis: 100%
+  &__img
+    width: 20px
+    height: 14px
