--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -81,11 +81,12 @@
       content: '5'
       font-size: 10px
       line-height: 13px
-.swiper-container
-  position: relative
-  border-radius: 8px
-  max-width: 100%
-  height: 100%
+.swiper
+  &-container
+    position: relative
+    border-radius: 8px
+    max-width: 100%
+    height: 100%
 
 .booking
   width: 350px
