--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -28,6 +28,10 @@
     text-transform: uppercase
     font-size: 14px
     line-height: 18px
+  &__item
+    &--mobile
+      &--visible
+        display: none
 .search
   position: relative
   overflow: hidden
@@ -63,5 +67,7 @@
   &__name
     height: 40px
     margin-left: 18px
+    font-size: 14px
+    line-height: 18px
     color: $text-color
     padding-top: 9px
