create: modal window

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -91,6 +91,10 @@
       &-form
         grid-row: 4
         grid-column: span 5
+  .modal
+    &__dialog
+      &--visible
+        padding: 33px 50px
 
 @media (max-width: 768px)
   body
@@ -211,6 +215,9 @@
   .footer
     &__input
       flex-basis: 100%
+  .modal
+    &__button
+      margin: 15px 15px 20px 0
 
 @media (max-width: 576px)
   .container
