--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -9,3 +9,26 @@ body
   margin: auto
 img
   max-width: 100%
+.input
+  border-radius: 4px
+  border: none
+  background-color: #fff
+  padding: 0 23px
+  height: 50px
+.message
+  height: 123px
+  background-color: #fff
+  border-radius: 4px
+  border: none
+  padding: 18px 23px
+.button
+  min-width: 160px
+  min-height: 50px
+  padding: 18px
+  font-weight: bold
+  font-size: 12px
+  line-height: 15px
+  color: $light
+  background-color: $button-bg-color
+  border: none
+  border-radius: 4px
