--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -67,7 +67,8 @@
       grid-template-columns: repeat(6, 1fr)
       grid-row-gap: 40px
     &__input
-      flex-basis: 49%
+      &-group
+        flex-basis: 49%
     &__logo
       grid-row: 1 / 2
       grid-column: span 2
@@ -214,7 +215,8 @@
       margin-top: 20px
   .footer
     &__input
-      flex-basis: 100%
+      &__group
+        flex-basis: 100%
   .modal
     &__button
       margin: 15px 15px 20px 0
