--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -32,3 +32,6 @@ img
   background-color: $button-bg-color
   border: none
   border-radius: 4px
+  cursor: pointer
+.error
+  color: $button-bg-color
