--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -70,8 +70,10 @@
     font-size: 18px
     line-height: 23px
   &__input
-    margin-bottom: 15px
-    flex-basis: 48%
+    width: 100%
+    &-group
+      margin-bottom: 15px
+      flex-basis: 48%
   &__message
     flex-basis: 100%
     margin-bottom: 22px
