--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -43,11 +43,11 @@
     text-align: center
   &__input
     width: 100%
-    margin-bottom: 15px
+    margin-top: 15px
   &__message
     width: 100%
     min-height: 123px
-    margin-bottom: 15px
+    margin: 15px 0 15px 0
   &__info
     font-weight: bold
     font-size: 12px
