--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -44,6 +44,7 @@
       background-size: 10px
       background-position: center
       background-repeat: no-repeat
+
       &--next
         right: 18px
         background-image: url(../img/arrow-next.svg)
@@ -64,9 +65,9 @@
 .ratting
   display: flex
   flex-wrap: wrap
+  justify-content: center
   max-width: 65px
   min-height: 45px
-  text-align: center
   border-radius: 4px
   color: $light
   background-color: $button-bg-color
@@ -77,6 +78,7 @@
   &__counter
     font-size: 14px
     line-height: 18px
+    text-align: center
     &:after
       content: '5'
       font-size: 10px
