fix: fixed errors

--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -17,7 +17,7 @@
   width: 177px
 .navigation
   list-style-type: none
-  padding: 31px 0
+  padding: 29px 0
   margin: 0
   display: flex
   align-items: center
@@ -26,6 +26,7 @@
     color: $light
     text-decoration: none
     text-transform: uppercase
+    font-weight: bold
     font-size: 14px
     line-height: 18px
   &__item
@@ -44,7 +45,7 @@
     padding-right: 75px
     background-color: #F5FAFE
     border: none
-    font-style: 12px
+    font-size: 12px
     line-height: 15px
     color: $text-color
   &__button
@@ -55,6 +56,7 @@
     height: 100%
     width: 65px
     border: none
+    cursor: pointer
 .user
   display: flex
   align-items: center
