--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -18,7 +18,7 @@
     top: 50%
     transform: translate(-50%, -50%)
     max-width: 478px
-    padding: 33px 88px
+    padding: 18px 88px 33px 88px
     border-radius: 8px
     background-color: $dark
     color: $light
@@ -39,7 +39,7 @@
     font-weight: bold
     font-size: 18px
     line-height: 23px
-    margin-bottom: 15px
+    margin-bottom: 0
     text-align: center
   &__input
     width: 100%
@@ -48,6 +48,7 @@
     width: 100%
     min-height: 123px
     margin: 15px 0 15px 0
+    resize: none
   &__info
     font-weight: bold
     font-size: 12px
