--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -19,27 +19,35 @@
 @media (max-width: 992px)
   .container, .newsletter-wrapper
     max-width: 700px
+  .logo
+    &__image
+      height: 14px
+  .user
+    &__name
+      padding-top: 12px
   .navbar
     &-top
       padding: 30px 0
     &__search
-      margin-left: auto
+      margin-left: 0
   .search
     &__input
       width: 340px
   .navigation
-    padding: 22px 0
+    padding: 19px 10px
     &__link
       font-size: 12px
       line-height: 15px
   .hotel
+    padding-top: 25px
+    padding-bottom: 59px
     &-grid
       flex-direction: column
     &__wrap
       flex-direction: row
       justify-content: space-between
     &__slider
-      margin-bottom: 40px
+      margin-bottom: 29px
     &-slider
       width: 100%
   .booking, .map
@@ -48,42 +56,69 @@
     &-slide
       &__image
         height: 450px
+    &-container
+      height: 450px
+  .newsletter
+    padding: 95px 0 90px 0
   .reviews
+    padding: 12px 0 0 0
+    &-title
+      font-size: 30px
+      margin-bottom: 50px
     &-slider
       &__item
         max-width: 580px
       &__text
         max-width: 455px
+      &__button
+        top: 35%
+        &--next
+          right: 0
+        &--prev
+          left: 0
   .activities
+    padding: 0 0 48px 0
     &-wrapper
       flex-wrap: wrap
     &__card
       margin-bottom: 20px
+    &__title
+      margin-top: 15px
+      margin-bottom: 55px
   .card
     width: 340px
-    height: 230px
+    height: 255px
+    &__title
+      max-width: 200px
   .footer
+    padding-top: 75px
     &-wrapper
-      grid-template-columns: repeat(6, 1fr)
+      // grid-template-columns: repeat(6, 1fr)
+      grid-template-columns: 27% 2fr 195px
       grid-row-gap: 40px
+      grid-column-gap: 0
     &__input
       &-group
-        flex-basis: 49%
+        flex-basis: 47%
     &__logo
       grid-row: 1 / 2
-      grid-column: span 2
+      grid-column: 1 / 2
+      img
+        height: 110px
     &__social
       &-network
         grid-row: 1 / 2
-        grid-column: span 4
+        grid-column: 2 / 4
         align-self: center
     &__categories
       grid-row: 2 / 3
-      grid-column: span 2
+      grid-column: 1 / 1
     &__additional
-      grid-column: span 2
+      grid-row: 2 / 3
+      grid-column: 2 / 4
     &__legal
-      grid-column: span 2
+      grid-row: 2 / 3
+      grid-column: 4 / 6
     &__contact
       &-details
         grid-row: 3
@@ -91,13 +126,28 @@
     &__contacts
       &-form
         grid-row: 4
-        grid-column: span 5
+        grid-column: 1/5
+        margin-right: 65px
+    &__title
+      &--mt-2
+        margin-top: 21px
+      &--mb-3
+        margin-bottom: 33px
+    &__conditions
+      grid-column: 1 / 3
+      grid-row: 5 / 6
+    &__pay
+      grid-column: 4 / 6
+      grid-row: 5 / 6
+    &__icon
+      &-wrapper
+        padding-left: 3px
   .modal
     &__dialog
       &--visible
         padding: 33px 50px
 
-@media (max-width: 768px)
+@media (max-width: 767px)
   body
     padding-top: 78px
   .container
@@ -113,28 +163,35 @@
     &__user
       flex-direction: column
       justify-content: center
-    &__mobile
-      &--fixed
-        position: fixed
-        top: 0
-        left: 0
-        right: 0
-        z-index: 40
     &-menu
       display: none
       position: fixed
+      z-index: 400
       left: 0
       right: 0
       bottom: 0
-      top: 78px
+      top: 70px
+      overflow-y: auto
+      overflow-x: hidden
       &--visible
         display: block
+    &-top
+      position: fixed
+      top: 0
+      left: 0
+      right: 0
+      z-index: 40
+      background-color: $light
+      padding: 20px 20px 27px 20px
+    &__search
+      max-width: 70%
+      margin: auto
   .user
     &__name
       &--light
         color: $light
         margin-left: 0
-        margin-top: 10px
+        // margin-top: 10px
         flex-basis: 100%
   .menu
     &-button
@@ -153,10 +210,12 @@
     flex-direction: column
     padding-top: 30px
     &__item
-      margin-bottom: 20px
+      margin-bottom: 12px
       &--mobile
         &--visible
           display: block
+          &.sf
+            margin: 15px 0 35px 0
   .hotel
     &-name
       flex-basis: 100%
@@ -195,7 +254,6 @@
         padding: 0 30px 30px
         &:after, &:before
           display: none
-    &-swiper
       &__button
         top: 30px
         &--prev
@@ -208,16 +266,27 @@
     width: 48%
     height: 255px
   .map
+    margin-top: 20px
     width: 100%
-    iframe
+    img
       width: 100%
-    &__block
-      margin-top: 20px
+      object-fit: cover
+    // iframe
+    //   width: 100%
+
   .footer
     &__input
       &__group
         flex-basis: 100%
+    &__link
+      // font-size: 14px
+      // line-height: 18px
   .modal
+    &__dialog
+      overflow-y: auto
+      overflow-x: hidden
+      &--visible
+        width: 90%
     &__button
       margin: 15px 15px 20px 0
 
@@ -258,6 +327,10 @@
         width: 90%
   .card
     width: 100%
+    &:nth-child(2)
+      order: 1
+    &:last-child
+      order: 2
   .footer
     &-wrapper
       grid-template-columns: 1fr
@@ -308,7 +381,118 @@
       margin-top: 10px
       display: block
 
-@media  (min-width: 320px) and (max-width: 480px)
+@media  (max-width: 480px)
   .navbar
     &-top
-      padding: 25px
+      // padding: 20px 20px 27px 20px
+  .breadcrumb
+    &-list
+      padding: 10px 0
+  .hotel
+    padding-top: 14px
+    padding-bottom: 43px
+    &-info
+      padding-bottom: 40px
+    &-name
+      margin-top: 8px
+    .swiper
+      &-slide
+        &__image
+          height: 179px
+      &-container
+        height: 179px
+  .newsletter
+    &-title
+      &__strong
+        font-size: 30px
+  .reviews
+    &-title
+      font-size: 18px
+      line-height: 20px
+      max-width: 245px
+      margin: 30px auto 45px
+    &-swiper
+
+      &__button
+        &--prev
+          left: 10%
+        &--next
+          right: 10%
+    &-slider
+      &__item
+        padding: 0 10px 30px
+  .activities
+    margin-top: 120px
+    padding-bottom: 40px
+    &__title
+      font-size: 18px
+      margin-bottom: 35px
+    &__card
+      margin-bottom: 20px
+
+  .footer
+    padding-top: 69px
+    &-wrapper
+      grid-gap: 0
+      margin-top: 7px
+    &__legal
+      grid-row: 3
+      grid-column: 1
+      justify-self: start
+      margin-top: 29px
+    &__social
+      &-network
+        margin-top: 34px
+    &__categories
+      grid-row: 5
+      grid-column: 1
+      margin-top: 29px
+    &__contact
+      &-details
+        margin-top: 23px
+    &__contacts
+      &-form
+        margin-top: 38px
+        h3
+          margin-bottom: 15px
+    &__title
+      &--mb-3
+        margin-bottom: 23px
+    &__text
+
+      line-height: 25px
+      margin-bottom: 18px
+    &__additional
+      grid-row: 4
+      grid-column: 1
+      margin-top: 29px
+    &__item
+      &--mb-2
+        margin-bottom: 22px
+    &__input
+      &-group
+        flex-basis: 100%
+    &__message
+      margin-bottom: 13px
+    &__conditions
+      grid-row: 8
+      grid-column: 1
+      // margin-bottom: 25px
+    &__condition
+      margin-right: 5px
+    &__pay
+      grid-row: 9
+      text-align: left
+      grid-column: 1
+    &__icon
+      &-wrapper
+        min-width: 28px
+
+  .modal
+    &__dialog
+      height: 100vh
+      &--visible
+        padding: 25px 20px
+
+  .map
+    height: 175px
