--- a/sass/blocks/_activities.sass
+++ b/sass/blocks/_activities.sass
@@ -1,5 +1,5 @@
 .activities
-  padding: 60px 0 98px 0
+  padding: 50px 0 98px 0
   &__title
     font-weight: bold
     font-size: 24px
@@ -42,7 +42,7 @@
     color: $light
     margin-bottom: 18px
     margin-top: auto
-    font-weight: 300
+    font-weight: bold
     font-size: 16px
     line-height: 20px
   &__button
@@ -54,3 +54,4 @@
     border: none
     border-radius: 4px
     padding: 7px 22px
+    cursor: pointer
