--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -9,7 +9,8 @@
     grid-auto-rows: minmax(40px, min-content)
   &__logo
     width: 166px
-    align-self: stretch
+    align-self: center
+
     grid-row: 1 / 3
   &__categories
     grid-row: 1 / 4
@@ -23,7 +24,9 @@
       grid-row: 2 / 4
       grid-column: span 2
       display: flex
-      align-items: center
+      align-items: start
+  &__legal
+    justify-self: end
   &__contact
     &-details
       grid-column: span 2
@@ -43,32 +46,48 @@
     font-weight: bold
     font-size: 18px
     line-height: 23px
-    margin: 0 0 16px 0
+    margin: 0 0 1em 0
     &--inline
       margin: 0 43px 0 0
     &--mb-3
       margin-bottom: 30px
+    &--mt-2
+      margin-top: 12px
   &__item
     display: flex
-    font-weight: flex-start
+    // font-weight: flex-start
     font-size: 14px
     line-height: 160%
     list-style: none
     color: $footer-text-color
     &--mb-2
       margin-bottom: 20px
+
   &__icon
     &-wrapper
       min-width: 40px
   &__text
     color: $footer-text-color
     margin-bottom: 22px
+    font-size: 14px
+    font-weight: 300
   &__link
     text-decoration: none
     color: inherit
-    font-weight: normal
-    font-size: 18px
-    line-height: 23px
+    font-weight: 300
+    font-size: 14px
+    // line-height: 18px
+    &-end
+      font-weight: 300
+      font-size: 12px
+      line-height: 15px
+      text-decoration: none
+      color: inherit
+
+  &__connection
+    text-decoration: none
+    color: inherit
+    display: inline
   &__input
     width: 100%
     &-group
@@ -78,6 +97,9 @@
     flex-basis: 100%
     margin-bottom: 22px
     resize: none
+    font-weight: normal
+    font-size: 12px
+    line-height: 15px
   &__button
     min-width: 160px
     min-height: 50px
@@ -96,7 +118,7 @@
     color: $footer-text-color
   &__end
     min-width: 100%
-    margin-top: 102px
+    margin-top: 80px
     display: flex
     align-items: center
     justify-content: space-between
@@ -105,11 +127,25 @@
     margin-right: 10px
     font-size: 12px
     line-height: 15px
+  &__conditions
+    grid-column: 2 / 4
+    grid-row: 6 / 7
+    align-self: end
+    text-align: center
   &__pay
-    max-width: 136px
-    display: flex
+    // max-width: 136px
+    // display: flex
     justify-content: space-between
-    flex-basis: 100%
+    align-self: end
+    text-align: right
+    // flex-basis: 100%
+    grid-column: 4 / 5
+    grid-row: 6/ 7
   &__img
-    width: 20px
-    height: 14px
+    width: 21px
+    height: 15px
+    margin: 0 1px
+.input
+  font-weight: normal
+  font-size: 12px
+  line-height: 15px
