--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -1,5 +1,5 @@
 .hotel
-  padding: 23px 0 70px 0
+  padding: 23px 0 66px 0
   &-info
     display: flex
     justify-content: space-between
@@ -9,6 +9,13 @@
       display: flex
       flex-wrap: wrap
       align-items: center
+      a
+        text-decoration: none
+        background-color: $button-bg-color
+        color: $light
+        margin-top: 10px
+        padding: 10px
+        border-radius: 4px
     &__offer
       margin-left: 14px
     &__name
@@ -55,6 +62,9 @@
     margin: 0
 .stars
   flex-basis: 100%
+  img
+    margin: 0 1px
+    float: left
 .offer
   font-size: 10px
   line-height: 13px
@@ -150,6 +160,7 @@
     font-size: 14px
     line-height: 19px
     border-radius: 4px
+    padding: 0
     border: none
     background-color: $button-bg-color
     color: $light
@@ -159,3 +170,6 @@
   background-color: #e0d6d6
   border-radius: 10px
   overflow: hidden
+  img
+    height: 100%
+    width: 100%
