--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -24,33 +24,43 @@
     justify-content: space-between
     max-width: 731px
     margin: auto
+    label.invalid-subscribe
+      position: absolute
+      left: 0
+      top: 65px
+      width: 100%
+      font-weight: 700
+      color: #ec1f46
   &-title
     color: $light
     font-weight: 100
     font-size: 24px
     line-height: 30px
+    margin: 0
     &__strong
       display: block
       font-weight: 100
       font-size: 36px
       line-height: 45px
       text-transform: uppercase
+
 .subscribe
   width: 350px
   height: 55px
   position: relative
   border-radius: 4px
   border: none
-  overflow: hidden
+  // overflow: hidden
   &__input
     position: absolute
-    // font-style: 100
     font-size: 14px
     line-height: 18px
     width: 100%
     height: 100%
     padding-left: 33px
     padding-right: 75px
+    border: none
+    border-radius: 8px
   &__button
     position: absolute
     right: 0
@@ -59,7 +69,9 @@
     padding: 0 18px
     background: $button-bg-color
     color: $light
-    font-style: 300
+    font-weight: 300
     font-size: 12px
     line-height: 15px
     border: none
+    cursor: pointer
+    border-radius: 0 8px 8px 0
